--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.1.5",
+    "sweetalert2": "^11.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "rollup": "^3.0.0",
     "vite": "^6.1.0"
   }
 }
