--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.3",
+    "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.6.3",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.487.0",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -19,7 +23,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.3",
-    "sweetalert2": "^11.16.0"
+    "sweetalert2": "^11.16.0",
+    "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
